--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@
 * { padding: 0; margin: 0; }
 html {
     height: 100%;
+    scroll-behavior: smooth;
 }
 html::-webkit-scrollbar {
     width: 10px;
@@ -132,23 +133,15 @@ a { color: inherit; }
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
+    text-align: left;
     height: 100vh;
-}
-.code-block {
-    margin-top: 50vh;
-    height: 100vh;
-    transform: translateZ(0);
-    background-color: rgb(14,17,22);
-    color: rgb(202, 209, 216);
-    display: flex;
-    flex-direction: column;
+    margin-left: 80px;
+    margin-right: 80px;
     line-height: 1.25;
-    margin-left: 10px;
-    margin-right: 10px;
-    height: 100vh;
-    align-items: center;
-    font-size: 1.2em;
+}
+
+.about-me-data {
+    font-size: 1.5em
 }
 .social {
     display: flex;
