--- a/styles.css
+++ b/styles.css
@@ -135,8 +135,8 @@ a { color: inherit; }
     justify-content: center;
     text-align: left;
     height: 100vh;
-    margin-left: 80px;
-    margin-right: 80px;
+    margin-left: 8%;
+    margin-right: 8%;
     line-height: 1.25;
 }
 
