--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ a { color: inherit; }
     width: 3px;
     padding: 10px 15px;
     height: 35px;
-    border: 2px solid #fff;
+    border: 2px solid rgb(202, 209, 216);
     border-radius: 25px;
     opacity: 0.75;
     box-sizing: content-box;
@@ -123,7 +123,7 @@ a { color: inherit; }
     width: 3px;
     height: 10px;
     border-radius: 25%;
-    background-color: #fff;
+    background-color: rgb(202, 209, 216);
     animation-name: scroll;
     animation-duration: 2.2s;
     animation-timing-function: cubic-bezier(.15,.41,.69,.94);
