fix mailto link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -133,19 +133,21 @@
   <meta name="twitter:image" content="{{ site.image | absolute_url }}" />
   {% endif %} {% feed_meta %}
   <link
-    rel="favicon"
+    rel="apple-touch-icon"
     sizes="180x180"
-    href="/assets/img/avatar.jpg"
+    href="/assets/favicons/apple-touch-icon.png"
   />
   <link
-  rel="favicon"
-  sizes="32x32"
-  href="/assets/img/avatar.jpg"
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="/assets/favicons/favicon-32x32.png"
   />
   <link
-  rel="favicon"
-  sizes="16x16"
-  href="/assets/img/avatar.jpg"
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="/assets/favicons/favicon-16x16.png"
   />
   <link rel="manifest" href="/assets/favicons/site.webmanifest" />
   <link
