--- a/_includes/header.html
+++ b/_includes/header.html
@@ -132,6 +132,27 @@
   {% else %}
   <meta name="twitter:image" content="{{ site.image | absolute_url }}" />
   {% endif %} {% feed_meta %}
+  <link
+    rel="favicon"
+    sizes="180x180"
+    href="/assets/img/avatar.jpg"
+  />
+  <link
+  rel="favicon"
+  sizes="32x32"
+  href="/assets/img/avatar.jpg"
+  />
+  <link
+  rel="favicon"
+  sizes="16x16"
+  href="/assets/img/avatar.jpg"
+  />
+  <link rel="manifest" href="/assets/favicons/site.webmanifest" />
+  <link
+    rel="mask-icon"
+    href="/assets/favicons/safari-pinned-tab.svg"
+    color="#5bbad5"
+  />
   <meta name="apple-mobile-web-app-title" content="Jekyll Klise" />
   <meta name="application-name" content="Jekyll Klise" />
   <meta name="msapplication-TileColor" content="#da532c" />
