--- a/_includes/header.html
+++ b/_includes/header.html
@@ -132,7 +132,7 @@
   {% else %}
   <meta name="twitter:image" content="{{ site.image | absolute_url }}" />
   {% endif %} {% feed_meta %}
-  <link rel="shortcut icon" type="image/png" href="/assets//img/avatar.png">
+  <link rel="shortcut icon" type="image/png" href="/assets/favicons/avatar-round.png">
   <meta name="apple-mobile-web-app-title" content="Jekyll Klise" />
   <meta name="application-name" content="Jekyll Klise" />
   <meta name="msapplication-TileColor" content="#da532c" />
