--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <a class="footer_item" href="/thanks">ack.</a>
-  <a class="footer_item" href="https://drive.google.com/drive/folders/1T3P7J1Xlg3SXEUqzuEHeBhoyNopCp9OA?usp=drive_link">resume</a>
+  <a class="footer_item" href="https://drive.google.com/drive/folders/1T3P7J1Xlg3SXEUqzuEHeBhoyNopCp9OA?usp=drive_link" target="_blank">resume</a>
   <a class="footer_item" href="/feed.xml">rss</a>
   <span class="footer_item">&copy; {{ site.time | date: "%Y" }}</span>
 <script src="/assets/js/main.js" defer="defer"></script>
