--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -1,5 +1,6 @@
 // Navbar
 .navbar {
+  width: 100%;
   height: auto;
   max-width: calc(#{$wide-size} - (#{$spacing-full} * 2));
   max-width: -webkit-calc(#{$wide-size} - (#{$spacing-full} * 2));
@@ -264,9 +265,31 @@
   }
 }
 
-// Footer
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.wrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.page-content {
+  flex: 1;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .footer {
-  margin-top: 8em;
+  width: 100%;
+  flex-shrink: 0;
+  margin-top: auto;
   margin-bottom: 2em;
   text-align: center;
 
